--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mehvish-wellness-web</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Mehvish Wellness</title>
+    <meta name="description" content="Wellness services by Mehvish" />
+    <meta name="author" content="Mehvish Wellness Team" />
 
-    <meta property="og:title" content="mehvish-wellness-web" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Mehvish Wellness" />
+    <meta property="og:description" content="Wellness services by Mehvish" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://gynaetelecare.com/MehwishGynaetelecare.com.jpg" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://gynaetelecare.com/MehwishGynaetelecare.com.jpg" />
-  </head>
 
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
