Fixed Code and debugged Cover/Banner

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mehvish Wellness</title>
+    <img src="/MehwishGyaenatelecare.com.jpg" alt="Mehwish" />
     <meta name="description" content="Wellness services by Mehvish" />
     <meta name="author" content="Mehvish Wellness Team" />
 
@@ -11,11 +12,11 @@
     <meta property="og:title" content="Mehvish Wellness" />
     <meta property="og:description" content="Wellness services by Mehvish" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://gynaetelecare.com/MehwishGynaetelecare.com.jpg" />
+    <meta property="og:image" content="https://gynaetelecare.com/MehwishGyaenatelecare.com.jpg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://gynaetelecare.com/MehwishGynaetelecare.com.jpg" />
+    <meta name="twitter:image" content="https://gynaetelecare.com/MehwishGyaenatelecare.com.jpg" />
 
   </head>
   <body>
